Index, Projects, Contact, About

--- a/index.html
+++ b/index.html
@@ -1,1 +1,182 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+  <meta charset="utf-8">
+  <title>Isabella Zhang</title>
+  <link rel="icon" href="css/favicon.ico">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@300&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
+
+  <nav class="navbar">   
+    <ul class="nav-list">
+      <li class="nav-item"><a href="index.html">Home</a></li>
+      <li class="nav-item"><a href="#edu-block">Education</a></li>
+      <li class="nav-item"><a href="#exp-block">Experience</a></li>
+      <li class="nav-item"><a href="/html/projects.html">Projects</a></li>
+      <li class="nav-item"><a href="/html/contact-info.html">Contact</a></li>
+      <li class="nav-item"><a href="/html/about-me.html">About</a></li>
+    </ul>
+  </nav>
+
+  <div class="banner">
+    <h1 id="opening">
+      // Highlight something that makes you unique:
+    </h1>
+    <div id="first-name">
+      Isabella
+    </div>
+  </div>
+
+  <div class="self-introduction">
+    <div class="profile">
+      <img width=200 src="images/my-picture.png">
+      <hr>
+    </div>
+    <div class="bio">
+        <p>Chinese Canadian Girl Living in Seattle</p>
+        <p>MSCS at Northeastern University</p>
+        <p>Experience working as Software Engineer and Consultant</p>
+    </div>
+  </div>
+
+
+  <div class="education" id="edu-block">
+    <h2>
+      Education
+    </h2>
+    <div class="northeastern">
+      <img class="northeastern-logo" src="images/northeastern-logo.png">
+      <div class="northeastern-info">
+        <div class="info-heading">
+          <h5>
+            Northeastern University
+          </h5>
+          <h5>
+            Master of Science in Computer Science
+          </h5>
+          <h6>
+            Seattle, Washington
+          </h6>
+          <h6>
+            Sep 2019 - May 2022 (Expected)
+          </h6>
+        </div>
+        <div class="courses">
+          Relevant Courses:
+          <br>
+          Intensive Foundations in Computer Science, Discrete Mathematics and Data Structures, Object-oriented Design, Algorithms Foundations,
+          Computer Systems, Advanced Algorithms, Foundations of Software Engineering, Database Management Systems, Cloud Computing, Web Development,
+          Building Scalable Distributed Systems
+        </div>
+      </div>
+    </div>
+
+    <div class="mcgill">
+      <img class="mcgill-logo" src="images/mcgill-logo.png">
+      <div class="mcgill-info">
+        <div class="info-heading">
+          <h5>
+            McGill University
+          </h5>
+          <h5>
+            Bachelor of Science in Pharmacology
+          </h5>
+          <h6>
+            Montreal, Canada
+          </h6>
+          <h6>
+            Jan 2015 - Apr 2018
+          </h6>
+        </div>
+        <div class="courses">
+          Relevant Courses:
+          <br>
+          Principles of Statistics, Foundations of Programming, Introduction to Linguistics, Macroeconomic Analysis & Application
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="experience" id="exp-block">
+    <h2>
+      Experience
+    </h2>
+    <div class="pwc">
+      <img class="pwc-logo" src="images/pwc-logo.png">
+      <div class="pwc-info">
+        <div class="info-heading">
+          <h5>
+            Technology Consulting Intern
+          </h5>
+          <h5>
+            PricewaterhouseCoopers (PwC) Advisory Services LLC
+          </h5>
+          <h6>
+            New York City, New York
+          </h6>
+          <h6>
+            Jun 2021 - Aug 2021
+          </h6>
+        </div>
+        <ul>
+            <li>
+              Implemented a "Configure, Price, Quote" pricing software for a Fortune 10 pharmaceutical wholesale
+              client to provide accurate pricing recommendations to their sales representative team
+            </li>
+            <li>
+              Wrote 200+ test cases across three sprints to ensure the functionality of the system, and fixed defects
+              reported by the client's testing engineers
+            </li>
+            <li>
+              Consolidated 1125 new pharmacy primary vendor contracts to check for potential duplicates and reduced
+              digitization efforts by ~65%
+            </li>
+            <li>
+              Helped organize and coordinate meetings between team and the client
+            </li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="nakisa">
+      <img class="nakisa-logo" src="images/nakisa.png">
+      <div class="nakisa-info">
+        <div class="info-heading">
+          <h5>
+            Software Engineer Intern
+          </h5>
+          <h5>
+            Nakisa Inc.
+          </h5>
+          <h6>
+            Montreal, Canada
+          </h6>
+          <h6>
+            Jan 2021 - Apr 2021
+          </h6>
+        </div>
+        <ul>
+            <li>
+              Worked on Hanelly, a cloud-based solution that offers organizational chart creation, org design
+              capabilities, and HR analytics
+            </li>
+            <li>
+              Performed the upgrade to the newest version of the application for three Fortune 500 clients
+            </li>
+            <li>
+              Wrote new code and fixed bugs for the organizational chart feature
+            </li>
+            <li>
+              Created test cases and an automatic screenshot-comparing script using Cypress, greatly decreasing the
+              time required for performing upgrades
+            </li>
+        </ul>
+      </div>
+    </div>
+</body>
+</html>
