Fixed projects page and nav bar

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -8,11 +8,15 @@
     <title>About Me</title>
 </head>
 <body>
-    <nav class="navbar">   
+    <nav class="navbar">
+        <div class="navname">
+            Isabella Zhang
+        </div> 
         <ul class="nav-list">
           <li class="nav-item"><a href="../index.html">Home</a></li>
           <li class="nav-item"><a href="projects.html">Projects</a></li>
           <li class="nav-item"><a href="contact-info.html">Contact</a></li>
+          <li class="nav-item"><a id="about-bar" href="about-me.html">About</a></li>
         </ul>
     </nav>
 
