--- a/html/contact-info.html
+++ b/html/contact-info.html
@@ -9,9 +9,13 @@
 </head>
 <body>
     <nav class="navbar">   
+        <div class="navname">
+            Isabella Zhang
+        </div> 
         <ul class="nav-list">
           <li class="nav-item"><a href="../index.html">Home</a></li>
           <li class="nav-item"><a href="projects.html">Projects</a></li>
+          <li class="nav-item"><a id="contact-bar" href="contact-info.html">Contact</a></li>
           <li class="nav-item"><a href="about-me.html">About</a></li>
         </ul>
     </nav>
