--- a/index.html
+++ b/index.html
@@ -7,21 +7,20 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-
-  <nav class="navbar">   
-    <ul class="nav-list">
-      <li class="nav-item"><a href="index.html">Home</a></li>
-      <li class="nav-item"><a href="#edu-block">Education</a></li>
-      <li class="nav-item"><a href="#exp-block">Experience</a></li>
-      <li class="nav-item"><a href="/html/projects.html">Projects</a></li>
-      <li class="nav-item"><a href="/html/contact-info.html">Contact</a></li>
-      <li class="nav-item"><a href="/html/about-me.html">About</a></li>
-    </ul>
-  </nav>
+    <div class="navbar">
+      <ul class="nav-list">
+        <span id="navname">Isabella Zhang</span>
+        <li class="nav-item"><a id="home-bar" href="index.html">Home</a></li>
+        <li class="nav-item"><a href="/html/projects.html">Projects</a></li>
+        <li class="nav-item"><a href="/html/contact-info.html">Contact</a></li>
+        <li class="nav-item"><a href="/html/about-me.html">About</a></li>
+      </ul>
+    </div>
 
   <div class="banner">
     <h1 id="opening">
@@ -39,7 +38,7 @@
     </div>
     <div class="bio">
         <p>Chinese Canadian Girl Living in Seattle</p>
-        <p>MSCS at Northeastern University</p>
+        <p>MSCS at <span id="neu">Northeastern University</span></p>
         <p>Experience working as Software Engineer and Consultant</p>
     </div>
   </div>
