make navbar appear same on all pages

--- a/html/contact-info.html
+++ b/html/contact-info.html
@@ -5,20 +5,20 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/contact.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <title>Contact Me</title>
 </head>
 <body>
-    <nav class="navbar">   
-        <div class="navname">
-            Isabella Zhang
-        </div> 
+
+    <div class="navbar">
         <ul class="nav-list">
+          <span id="navname">Isabella Zhang</span>
           <li class="nav-item"><a href="../index.html">Home</a></li>
           <li class="nav-item"><a href="projects.html">Projects</a></li>
           <li class="nav-item"><a id="contact-bar" href="contact-info.html">Contact</a></li>
           <li class="nav-item"><a href="about-me.html">About</a></li>
         </ul>
-    </nav>
+      </div>
 
     <div class="contact-links">
         <a href="https://www.linkedin.com/in/isabellasde/">LinkedIn</a>
