--- a/html/projects.html
+++ b/html/projects.html
@@ -5,21 +5,20 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/my-projects.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <title>Projects</title>
 </head>
 <body>
 
-    <nav class="navbar"> 
-        <div class="navname">
-            Isabella Zhang
-        </div>   
+    <div class="navbar">
         <ul class="nav-list">
+          <span id="navname">Isabella Zhang</span>
           <li class="nav-item"><a href="../index.html">Home</a></li>
           <li class="nav-item"><a id="projs-bar" href="projects.html">Projects</a></li>
           <li class="nav-item"><a href="contact-info.html">Contact</a></li>
           <li class="nav-item"><a href="about-me.html">About</a></li>
         </ul>
-    </nav>
+      </div>
 
     <div class="project-list">
         <h2>
