--- a/html/about-me.html
+++ b/html/about-me.html
@@ -25,30 +25,34 @@
             More About Me ...
         </h2>
         <br><br>
-        <div class="canada about-block">
-            <div>
-                Grew up in Montreal, Canada
-            </div>
-            <br>
-            <img id="canada-pic" src="../images/canada-and-quebec-flags.jpg" alt="">
-        </div>
 
-        <div class="documentary about-block">
-            <div>
-                Enjoy watching documentaries
-            </div>
-            <br>
-            <img id="documentary-pic" src="../images/documentary.jfif" alt="">
-        </div>
 
-        <div class="dumb-game">
-            <div>
-                And playing silly games like ... Minesweeper!
+        <div class="grid-container">
+            <div class="canada about-block">
+                <div class="my-intro">
+                    Grew up in Montreal, Canada
+                </div>
+                <br>
+                <img id="canada-pic" src="../images/canada-and-quebec-flags.jpg">
             </div>
-            <br>
-            <img id="minesweeper-pic" src="../images/minesweeper.jpg" alt="">
-            <br><br>
-            <a href="https://minesweeper.online/" target="_blank">Play It Yourself!</a>
+
+            <div class="documentary about-block">
+                <div class="my-intro">
+                    Enjoy watching documentaries
+                </div>
+                <br>
+                <img id="documentary-pic" src="../images/documentary.jfif">
+            </div>
+
+            <div class="dumb-game about-block">
+                <div class="my-intro">
+                    And playing silly games like ... Minesweeper!
+                </div>
+                <br>
+                <img id="minesweeper-pic" src="../images/minesweeper.jpg">
+                <br><br>
+                <a href="https://minesweeper.online/" target="_blank">Play It Yourself!</a>
+            </div>
         </div>
 
     </div>
