changed the links - now all open in a new window

--- a/html/contact-info.html
+++ b/html/contact-info.html
@@ -21,9 +21,9 @@
       </div>
 
     <div class="contact-links">
-        <a href="https://www.linkedin.com/in/isabellasde/">LinkedIn</a>
-        <a href="https://github.com/isazyzhang">Github</a>
-        <a href="https://www.facebook.com/zuyubaby/">Facebook</a>
+        <a href="https://www.linkedin.com/in/isabellasde/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/isazyzhang" target="_blank">Github</a>
+        <a href="https://www.facebook.com/zuyubaby/" target="_blank">Facebook</a>
     </div>
 
     <div class="email">
