--- a/html/projects.html
+++ b/html/projects.html
@@ -47,8 +47,8 @@
                         Deployed the application to Heroku
                     </li>
                 </ul>
-                <a class="proj-ref" href="https://neudash.herokuapp.com">Link to Website</a>
-                <a class="proj-ref" href="https://github.com/isazyzhang/NEUDash-Food-Delivery-Website">Link to Source Code</a>
+                <a class="proj-ref" href="https://neudash.herokuapp.com" target="_blank">Link to Website</a>
+                <a class="proj-ref" href="https://github.com/isazyzhang/NEUDash-Food-Delivery-Website" target="_blank">Link to Source Code</a>
             </div>
         </div>
         <div class="book">
