fixed all the src links such that no .html shows

--- a/about/index.html
+++ b/about/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="../home/home-css.css">
+    <link rel="stylesheet" href="about-css.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <title>About Me</title>
@@ -13,10 +13,10 @@
     <div class="navbar">
         <ul class="nav-list">
           <span id="navname">Isabella Zhang</span>
-          <li class="nav-item"><a href="../index.html">Home</a></li>
-          <li class="nav-item"><a href="projects.html">Projects</a></li>
-          <li class="nav-item"><a href="contact-info.html">Contact</a></li>
-          <li class="nav-item"><a id="about-bar" href="about-me.html">About</a></li>
+          <li class="nav-item"><a href="../home/">Home</a></li>
+          <li class="nav-item"><a href="../projects/">Projects</a></li>
+          <li class="nav-item"><a href="../contact/">Contact</a></li>
+          <li class="nav-item"><a id="about-bar">About</a></li>
         </ul>
     </div>
 
@@ -33,7 +33,7 @@
                     Grew up in Montreal, Canada
                 </div>
                 <br>
-                <img id="canada-pic" src="../images/canada-and-quebec-flags.jpg">
+                <img id="canada-pic" src="images/canada-and-quebec-flags.jpg">
             </div>
 
             <div class="documentary about-block">
@@ -41,7 +41,7 @@
                     Enjoy watching documentaries
                 </div>
                 <br>
-                <img id="documentary-pic" src="../images/documentary.jfif">
+                <img id="documentary-pic" src="images/documentary.jfif">
             </div>
 
             <div class="dumb-game about-block">
@@ -49,7 +49,7 @@
                     And playing silly games like ... Minesweeper!
                 </div>
                 <br>
-                <img id="minesweeper-pic" src="../images/minesweeper.jpg">
+                <img id="minesweeper-pic" src="images/minesweeper.jpg">
                 <br><br>
                 <a href="https://minesweeper.online/" target="_blank">Play It Yourself!</a>
             </div>
