--- a/home/index.html
+++ b/home/index.html
@@ -3,20 +3,22 @@
 <head>
   <meta charset="utf-8">
   <title>Isabella Zhang</title>
-  <link rel="icon" href="home/images/favicon.ico">
-  <link rel="stylesheet" href="home/home-css.css">
+  <link rel="icon" href="images/favicon.ico">
+  <link rel="stylesheet" href="home-css.css">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
+
     <div class="navbar">
       <ul class="nav-list">
         <span id="navname">Isabella Zhang</span>
-        <li class="nav-item"><a id="home-bar" href="home/">Home</a></li>
-        <li class="nav-item"><a href="projects/">Projects</a></li>
-        <li class="nav-item"><a href="contact/">Contact</a></li>
-        <li class="nav-item"><a href="about/">About</a></li>
+        <li class="nav-item"><a id="home-bar">Home</a></li>
+        <li class="nav-item"><a href="../projects/">Projects</a></li>
+        <li class="nav-item"><a href="../contact/">Contact</a></li>
+        <li class="nav-item"><a href="../about/">About</a></li>
       </ul>
     </div>
 
@@ -31,7 +33,7 @@
 
   <div class="self-introduction">
     <div class="profile">
-      <img width=200 src="home/images/my-picture.png">
+      <img width=200 src="images/my-picture.png">
       <hr>
     </div>
     <div class="bio">
@@ -47,7 +49,7 @@
       Education
     </h2>
     <div class="northeastern">
-      <img class="northeastern-logo" src="home/images/northeastern-logo.png">
+      <img class="northeastern-logo" src="images/northeastern-logo.png">
       <div class="northeastern-info">
         <div class="info-heading">
           <h5>
@@ -74,7 +76,7 @@
     </div>
 
     <div class="mcgill">
-      <img class="mcgill-logo" src="home/images/mcgill-logo.png">
+      <img class="mcgill-logo" src="images/mcgill-logo.png">
       <div class="mcgill-info">
         <div class="info-heading">
           <h5>
@@ -104,7 +106,7 @@
       Experience
     </h2>
     <div class="pwc">
-      <img class="pwc-logo" src="home/images/pwc-logo.png">
+      <img class="pwc-logo" src="images/pwc-logo.png">
       <div class="pwc-info">
         <div class="info-heading">
           <h5>
@@ -141,7 +143,7 @@
     </div>
 
     <div class="nakisa">
-      <img class="nakisa-logo" src="home/images/nakisa.png">
+      <img class="nakisa-logo" src="images/nakisa.png">
       <div class="nakisa-info">
         <div class="info-heading">
           <h5>
