--- a/contact/index.html
+++ b/contact/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/contact.css">
+    <link rel="stylesheet" href="../home/home-css.css">
+    <link rel="stylesheet" href="contact-css.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <title>Contact Me</title>
@@ -13,10 +13,10 @@
     <div class="navbar">
         <ul class="nav-list">
           <span id="navname">Isabella Zhang</span>
-          <li class="nav-item"><a href="../index.html">Home</a></li>
-          <li class="nav-item"><a href="projects.html">Projects</a></li>
-          <li class="nav-item"><a id="contact-bar" href="contact-info.html">Contact</a></li>
-          <li class="nav-item"><a href="about-me.html">About</a></li>
+          <li class="nav-item"><a href="../home/">Home</a></li>
+          <li class="nav-item"><a href="../projects/">Projects</a></li>
+          <li class="nav-item"><a id="contact-bar">Contact</a></li>
+          <li class="nav-item"><a href="../about/">About</a></li>
         </ul>
       </div>
 
