--- a/projects/index.html
+++ b/projects/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/my-projects.css">
+    <link rel="stylesheet" href="../home/home-css.css">
+    <link rel="stylesheet" href="projects-css.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <title>Projects</title>
@@ -13,10 +13,10 @@
     <div class="navbar">
         <ul class="nav-list">
           <span id="navname">Isabella Zhang</span>
-          <li class="nav-item"><a href="../index.html">Home</a></li>
-          <li class="nav-item"><a id="projs-bar" href="projects.html">Projects</a></li>
-          <li class="nav-item"><a href="contact-info.html">Contact</a></li>
-          <li class="nav-item"><a href="about-me.html">About</a></li>
+          <li class="nav-item"><a href="../home/">Home</a></li>
+          <li class="nav-item"><a id="projs-bar">Projects</a></li>
+          <li class="nav-item"><a href="../contact/">Contact</a></li>
+          <li class="nav-item"><a href="../about/">About</a></li>
         </ul>
       </div>
 
@@ -26,7 +26,7 @@
         </h2>
         <div class="neudash">
             <div class="neudash-pic">
-                <img src="../images/ramen.png">
+                <img src="images/ramen.png">
             </div>
             <div class=neudash-info>
                 <div class="project-title">
@@ -53,7 +53,7 @@
         </div>
         <div class="book">
             <div class="book-pic">
-                <img src="../images/book.png">
+                <img src="images/book.png">
             </div>
             <div class="book-info">
                 <div class="project-title">
@@ -78,7 +78,7 @@
 
         <div class="todo-list">
             <div class="list-pic">
-                <img src="../images/todo-list-pic.png" alt="">
+                <img src="images/todo-list-pic.png" alt="">
             </div>
             <div class="todo-list-info">
                 <div class="project-title">
