--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
   <link rel="stylesheet" href="home/home-css.css">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+  <style>
+    @media (max-width: 400px) {
+      .navbar {
+        position: fixed;
+        display: flex;
+        justify-content: right;
+        align-items: center;
+        width: 100%;
+        height: 4%;
+        /* background-color: #F7DAD9; */
+        background-color: orange;
+        z-index: 1;
+      }
+  }
+  </style>
 </head>
 
 <body>
