--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
   <style>
-    @media (max-width: 400px) {
-      .navbar {
-        position: fixed;
-        display: flex;
-        justify-content: right;
-        align-items: center;
-        width: 100%;
-        height: 4%;
-        /* background-color: #F7DAD9; */
-        background-color: orange;
-        z-index: 1;
+
+      @media(min-width: 400px) {
+        .navbar {
+          position: fixed;
+          display: flex;
+          justify-content: right;
+          align-items: center;
+          width: 100%;
+          height: 7%;
+          background-color: #F7DAD9;
+          z-index: 1;
+        }
       }
-  }
+
   </style>
 </head>
 
