navbar and @media work

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
   <style>
 
-      @media(min-width: 400px) {
+      @media only screen and (min-device-width: 450px) {
         .navbar {
           position: fixed;
           display: flex;
