--- a/projects/index.html
+++ b/projects/index.html
@@ -7,6 +7,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <title>Projects</title>
+    <style>
+
+        @media only screen and (min-device-width: 450px) {
+          .navbar {
+            position: fixed;
+            display: flex;
+            justify-content: right;
+            align-items: center;
+            width: 100%;
+            height: 7%;
+            background-color: #F7DAD9;
+            z-index: 1;
+          }
+        }
+  
+    </style>
 </head>
 <body>
 
