fixed index page font

--- a/index.html
+++ b/index.html
@@ -66,19 +66,21 @@
       <img class="northeastern-logo" src="home/images/northeastern-logo.png">
       <div class="northeastern-info">
         <div class="info-heading">
-          <h5>
+          <div class="h5">
             Northeastern University
-          </h5>
-          <h5>
+          </div>
+          <div class="h5">
             Master of Science in Computer Science
-          </h5>
-          <h6>
+          </div>
+          <hr>
+          <div class="h6">
             Seattle, Washington
-          </h6>
-          <h6>
+          </div>
+          <div class="h6">
             Sep 2019 - May 2022 (Expected)
-          </h6>
+          </div>
         </div>
+        <br>
         <div class="courses">
           Relevant Courses:
           <br>
@@ -93,19 +95,21 @@
       <img class="mcgill-logo" src="home/images/mcgill-logo.png">
       <div class="mcgill-info">
         <div class="info-heading">
-          <h5>
+          <div class="h5">
             McGill University
-          </h5>
-          <h5>
+          </div>
+          <div class="h5">
             Bachelor of Science in Pharmacology
-          </h5>
-          <h6>
+          </div>
+          <br>
+          <div class="h6">
             Montreal, Canada
-          </h6>
-          <h6>
+          </div>
+          <div class="h6">
             Jan 2015 - Apr 2018
-          </h6>
+          </div>
         </div>
+        <br>
         <div class="courses">
           Relevant Courses:
           <br>
@@ -123,18 +127,19 @@
       <img class="pwc-logo" src="home/images/pwc-logo.png">
       <div class="pwc-info">
         <div class="info-heading">
-          <h5>
+          <div class="h5">
             Technology Consulting Intern
-          </h5>
-          <h5>
+          </div>
+          <div class="h5">
             PricewaterhouseCoopers (PwC) Advisory Services LLC
-          </h5>
-          <h6>
+          </div>
+          <br>
+          <div class="h6">
             New York City, New York
-          </h6>
-          <h6>
+          </div>
+          <div class="h6">
             Jun 2021 - Aug 2021
-          </h6>
+          </div>
         </div>
         <ul>
             <li>
@@ -160,18 +165,19 @@
       <img class="nakisa-logo" src="home/images/nakisa.png">
       <div class="nakisa-info">
         <div class="info-heading">
-          <h5>
+          <div class="h5">
             Software Engineer Intern
-          </h5>
-          <h5>
+          </div>
+          <div class="h5">
             Nakisa Inc.
-          </h5>
-          <h6>
+          </div>
+          <br>
+          <div class="h6">
             Montreal, Canada
-          </h6>
-          <h6>
+          </div>
+          <div class="h6">
             Jan 2021 - Apr 2021
-          </h6>
+          </div>
         </div>
         <ul>
             <li>
